# finzen

Downloads/finzen/backend/: .env.example  Dockerfile  config.py  database.py  deps.py  main.py  package-lock.json  package.json  pyproject.toml  railway.toml  seed.py
Downloads/finzen/backend/alembic/: env.py
Downloads/finzen/backend/auth/: real.py  simulada.py
Downloads/finzen/backend/jobs/: precios_job.py  recurrentes_job.py  tipos_cambio_job.py
Downloads/finzen/backend/models/: __init__.py  amigo.py  categoria.py  cuenta.py  deuda.py  etiqueta.py  grupo.py  inversion.py  miembro.py  movimiento.py  objetivo.py  presupuesto.py  recurrente.py  regla.py  tipo_cambio.py  transferencia.py  usuario.py  workspace.py  workspace_config.py
Downloads/finzen/backend/routers/: amigos.py  auth.py  categorias.py  cierre.py  cuentas.py  deudas.py  etiquetas.py  grupos.py  insights.py  inversiones.py  modos.py  movimientos.py  objetivos.py  presupuestos.py  recurrentes.py  reglas.py  transferencias.py  usuarios.py  workspaces.py
Downloads/finzen/backend/schemas/: amigo.py  categoria.py  cuenta.py  deuda.py  grupo.py  movimiento.py  objetivo.py  presupuesto.py  recurrente.py  regla.py  transferencia.py  usuario.py  validators.py  workspace.py
Downloads/finzen/backend/services/: conversion.py  deteccion.py  inversiones_calc.py  liquidacion.py  precios_inversion.py  prediccion.py  presupuestos_calc.py  recurrentes_svc.py  reglas_engine.py  saldos.py  salud_score.py  transferencias.py  workspace_defaults.py
Downloads/finzen/backend/tests/: conftest.py  test_amigos.py  (+13 more)
(+108 files in other folders)
